--- a/Expresiones Algebraicas/manin.ipynb
+++ b/Expresiones Algebraicas/manin.ipynb
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "556bdbe0",
    "metadata": {},
    "outputs": [
@@ -707,7 +707,7 @@
     "        resultado_terminos = VGroup()\n",
     "        resultado_y = linea.get_center()[1] - 0.8\n",
     "        \n",
-    "        # Término x³\n",
+    "        # Término x^3\n",
     "        term1_proceso = MathTex(\"x^3\", \"+\", \"0\", \"=\", \"x^3\", color=RED, font_size=36)\n",
     "        term1_proceso.move_to([p_terminos[0].get_center()[0], resultado_y - 0.5, 0])\n",
     "        self.play(Write(term1_proceso))\n",
