--- a/Expresiones Algebraicas/manin.ipynb
+++ b/Expresiones Algebraicas/manin.ipynb
@@ -23,7 +23,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from manim import *"
+    "\n",
+    "from manim import *\n",
+    "\n",
+    "TITLE_SIZE = 48\n",
+    "SUBTITLE_SIZE = 36\n",
+    "TERM_SIZE = 44\n",
+    "TITLE_COLOR = BLUE\n",
+    "TERM_COLOR = YELLOW\n",
+    "\n",
+    "\n",
+    "def make_title(scene, text, pos=UP, size=TITLE_SIZE, color=TITLE_COLOR, run_time=1):\n",
+    "    title = Text(text, font_size=size, color=color).to_edge(pos)\n",
+    "    scene.play(Write(title, run_time=run_time))\n",
+    "    return title\n",
+    "\n",
+    "\n",
+    "def replace_tex(scene, old, new, run_time=1):\n",
+    "    scene.play(TransformMatchingTex(old, new), run_time=run_time)\n",
+    "    return new\n",
+    "\n",
+    "\n",
+    "def highlight_terms(tex, color_map):\n",
+    "    tex.set_color_by_tex_to_color_map(color_map)\n",
+    "    return tex\n"
    ]
   },
   {
@@ -74,12 +97,11 @@
     "\n",
     "class Escena1_ExpresionesAlgebraicas(Scene):\n",
     "    def construct(self):\n",
-    "        # Título principal\n",
-    "        titulo = Text(\"Expresiones Algebraicas\", font_size=48, color=BLUE)\n",
-    "        titulo.to_edge(UP)\n",
-    "        self.play(Write(titulo))\n",
-    "        self.wait(2)\n",
-    "        \n",
+    "\n",
+    "# T?tulo principal\n",
+    "titulo = make_title(self, \"Expresiones Algebraicas\")\n",
+    "self.wait(1)\n",
+    "\n",
     "        # Definición de expresión algebraica\n",
     "        expresion_ejemplo = MathTex(\"3x^2 + 5x - 7\", font_size=60, color=YELLOW)\n",
     "        self.play(FadeIn(expresion_ejemplo))\n",
@@ -94,7 +116,7 @@
     "            MathTex(\"7\", color=GREEN).scale(1.2)\n",
     "        ).arrange(RIGHT, buff=0.3)\n",
     "        \n",
-    "        self.play(Transform(expresion_ejemplo, terminos))\n",
+    "        self.play(TransformMatchingTex(expresion_ejemplo, terminos))\n",
     "        self.wait(2)\n",
     "        \n",
     "        # Limpiar para siguiente concepto\n",
@@ -199,7 +221,7 @@
     "            MathTex(\"+8\", color=GREEN)\n",
     "        ).arrange(RIGHT, buff=0.3).scale(1.1)\n",
     "        \n",
-    "        self.play(Transform(polinomio, terminos_poly))\n",
+    "        self.play(TransformMatchingTex(polinomio, terminos_poly))\n",
     "        self.wait(2)\n",
     "        \n",
     "        self.play(FadeOut(polinomio))\n",
@@ -250,7 +272,7 @@
     "        \n",
     "        # Final\n",
     "        self.play(FadeOut(grupos), FadeOut(titulo))\n",
-    "        self.wait(1)"
+    "        self.wait(1)\n"
    ]
   },
   {
@@ -309,12 +331,11 @@
     "\n",
     "class Escena2_SumaPolinomios(Scene):\n",
     "    def construct(self):\n",
-    "        # Título con animación de escritura\n",
-    "        titulo = Text(\"Suma de Polinomios\", font_size=48, color=BLUE)\n",
-    "        titulo.to_edge(UP)\n",
-    "        self.play(Write(titulo, run_time=1.5))\n",
-    "        self.wait(2)\n",
-    "        \n",
+    "\n",
+    "# T?tulo con animaci?n de escritura\n",
+    "titulo = make_title(self, \"Suma de Polinomios\", run_time=1.5)\n",
+    "self.wait(1)\n",
+    "\n",
     "        # Presentar los dos polinomios con animación de aparición\n",
     "        p_label = MathTex(\"P(x) =\", font_size=44, color=WHITE)\n",
     "        p_expr = MathTex(\"x^3 - 6x^2 + 2x + 4\", font_size=44, color=YELLOW)\n",
@@ -580,12 +601,11 @@
     "\n",
     "class Escena3_RestaPolinomios(Scene):\n",
     "    def construct(self):\n",
-    "        # Título con animación\n",
-    "        titulo = Text(\"Resta de Polinomios\", font_size=48, color=BLUE)\n",
-    "        titulo.to_edge(UP)\n",
-    "        self.play(Write(titulo, run_time=1.5))\n",
-    "        self.wait(2)\n",
-    "        \n",
+    "\n",
+    "# T?tulo con animaci?n\n",
+    "titulo = make_title(self, \"Resta de Polinomios\", run_time=1.5)\n",
+    "self.wait(1)\n",
+    "\n",
     "        # Presentar los dos polinomios\n",
     "        p_label = MathTex(\"P(x) =\", font_size=44, color=WHITE)\n",
     "        p_expr = MathTex(\"x^3 - 6x^2 + 2x + 4\", font_size=44, color=YELLOW)\n",
@@ -882,12 +902,11 @@
     "\n",
     "class Escena4_ProductoPolinomios(Scene):\n",
     "    def construct(self):\n",
-    "        # Título\n",
-    "        titulo = Text(\"Producto de Polinomios\", font_size=48, color=BLUE)\n",
-    "        titulo.to_edge(UP)\n",
-    "        self.play(Write(titulo, run_time=1.5))\n",
-    "        self.wait(2)\n",
-    "        \n",
+    "\n",
+    "# T?tulo\n",
+    "titulo = make_title(self, \"Producto de Polinomios\", run_time=1.5)\n",
+    "self.wait(1)\n",
+    "\n",
     "        # Presentar el producto completo\n",
     "        producto_completo = MathTex(\n",
     "            \"(x^3 - 6x^2 + 2x + 4)\", \"\\\\cdot\", \"(6x^2 + 2x + 4)\",\n",
@@ -1122,12 +1141,11 @@
     "\n",
     "class Escena5_ProductoBinomios(Scene):\n",
     "    def construct(self):\n",
-    "        # Título principal\n",
-    "        titulo = Text(\"Producto de dos Binomios\", font_size=48, color=BLUE)\n",
-    "        titulo.to_edge(UP)\n",
-    "        self.play(Write(titulo, run_time=1.5))\n",
-    "        self.wait(2)\n",
-    "        \n",
+    "\n",
+    "# T?tulo principal\n",
+    "titulo = make_title(self, \"Producto de dos Binomios\", run_time=1.5)\n",
+    "self.wait(1)\n",
+    "\n",
     "        # FÓRMULA GENERAL\n",
     "        subtitulo = Text(\"Fórmula General\", font_size=36, color=ORANGE)\n",
     "        subtitulo.next_to(titulo, DOWN, buff=0.8)\n",
